# bill_processing_pipeline

./: .env.example  .gitignore  DESIGN_REFACTORED.md  README_REIMBURSEMENT.md  config.yaml  exceptions.py  llm_client.py  main.py  policy_reader.py  pyproject.toml  schema.py
bill_processing_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bills/: __init__.py  bill_extractor.py  bill_folder_reader.py  document_extractor.py  fusion_engine.py  numeric_validator.py  ocr_engine.py  qwen_hf_extractor.py
commons/: __init__.py  config.py  orchestrator.py  schema.py
core/: __init__.py  exceptions.py  interfaces.py  models.py  schema.py
decision/: __init__.py  decision_engine.py  validator.py
docs/: DESIGN_REFACTORED.md  EXTRACTION_TIPS.md  LANGCHAIN_UPGRADE.md
extraction/: __init__.py  discovery.py  image_io.py  numeric_validator.py  ocr.py  parser.py  pdf_text.py
extraction/templates/rupee/: README.md
llm/: __init__.py  llm_client.py
pipeline/: __init__.py  batch_processor.py  bill_pipeline.py  fallback.py
policy/: __init__.py  _json_utils.py  policy_extractor_allowances.py  policy_pipeline_allowances.py  policy_reader.py
prompts/: __init__.py  prompt_prefix_commute.txt  prompt_prefix_meal.txt  self_healing_decision.txt  system_prompt_bill_extraction.txt  system_prompt_decision.txt  system_prompt_policy_allowances.txt  vision_prompt_bill_extraction.txt
providers/: __init__.py  base.py  factory.py  huggingface_provider.py  ollama_provider.py  openai_provider.py
scripts/: run_self_test.py  setup_llms.py
services/: __init__.py  decision_service.py  ocr_service.py  post_processing_service.py  vision_service.py
test_expected/: README.md  batch_output.json
test_output/: batch_output.json  decisions.csv  policy_allowances.json  single_output.json
tests/: test_bill_pipeline_refactored.py  test_decision_engine.py  test_self_test_pipeline.py
utils/: __init__.py  config.py  image_utils.py  logger.py  ocr_normalize.py  result_cache.py  retry.py
